--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2 {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 5rem;
   font-size: 72px;
   background: -webkit-radial-gradient(#6e726e, #acafe3);
   -webkit-background-clip: text;
@@ -134,7 +134,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   background: linear-gradient(90deg, #d9042e 0%, #37406f 100%);
 }
 
@@ -349,7 +349,7 @@ img {
 #memo{
   width: 80rem;
   height: 50rem;
-  align-content: center;
+  text-align: justify;
 }
 .social-icons{
     
