--- a/style.css
+++ b/style.css
@@ -134,10 +134,9 @@ a:hover {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 120vh;
+  height: 130vh;
   background: linear-gradient(90deg, #d9042e 0%, #37406f 100%);
 }
-
 
 /* Section 2*/
 
@@ -313,35 +312,36 @@ footer {
   color: #f31702;
 }
 
-
-#repo1, #repo2, #repo3 ,#sendbutton{
+#repo1,
+#repo2,
+#repo3,
+#sendbutton {
   color: #000000;
 }
-#repo1:hover{
+#repo1:hover {
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.6);
   transform: scale(1.04);
 }
-#repo2:hover{
+#repo2:hover {
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.6);
   transform: scale(1.04);
 }
-#repo3:hover{
+#repo3:hover {
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.6);
   transform: scale(1.04);
 }
-
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 60%;
-  
+
   border-radius: 5px;
   color: #1f1f1f;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 img {
@@ -351,28 +351,27 @@ img {
 .container {
   padding: 2px 16px;
 }
-#contentid{
+#contentid {
   color: black;
 }
-.containerid,#heading1{
+.containerid,
+#heading1 {
   font-size: 6rem;
   font-size: 50px;
   background: -webkit-radial-gradient(#6e726e, #acafe3);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-#memo{
+#memo {
   width: auto;
   height: 50rem;
   text-align: justify;
 }
-.social-icons{
-    
+.social-icons {
   margin-top: 30px;
   margin-left: 60px;
 }
-.social-icons a{
-  
+.social-icons a {
   text-decoration: none;
   font-size: 20px;
   margin-top: 5px;
@@ -381,7 +380,7 @@ img {
   display: inline-block;
   transition: transform 0.5s;
 }
-.social-icons a:hover{
+.social-icons a:hover {
   color: white;
   transform: translateY(-5px);
 }
